# polanyigraph

./: .env.example  .gitignore  EXPLAINER.md  PLAN.md  README.md  dev.sh
backend/: mcp_memory_server.py  mcp_neo4j_server.py  mcp_server.py  mcp_skills_server.py  pyproject.toml  requirements.txt
backend/agents/: graph.py  skill_discovery.py  skill_store.py  state.py  tools.py
backend/analytics/: projection.py  registry.py  result.py  roles.py  store.py
backend/api/: agent.py  analytics.py  chat.py  enrich.py  graph.py  graph_maintenance.py  graphs.py  history.py  ingest.py  memory.py  ontology.py  query.py  reason.py  rules.py  settings.py  skills.py
backend/app/: config.py  dependencies.py  main.py  schemas.py
backend/db/: graphdb_client.py  neo4j_client.py
backend/extraction/: pipeline.py
backend/llm/: client.py  embedder.py
backend/materialization/: client.py  commands.py  policy.py
backend/ontology/: loader.py  schema.py  sync.py
backend/reasoning/: engine.py  rules_repo.py
backend/services/: analytics_service.py  chat_history_service.py  chat_service.py  community_service.py  edgar_service.py  enrichment_service.py  entity_resolution_service.py  graph_maintenance_loop.py  graph_service.py  graphiti_memory_service.py  history_service.py  ids.py  ingest_service.py  maintenance_schedule_service.py  maintenance_scheduler.py  memory_config_service.py  memory_service.py  nl_query_service.py  path_engine.py  preferences_store.py  query_engine.py  reasoning_service.py  rule_mining_service.py  rules_store.py  skill_activation_store.py  summary_service.py  (+2 more)
(+276 files in other folders)
