[project]
name = "neurosymbolic-backend"
version = "0.1.0"
description = "Domain-agnostic neurosymbolic knowledge-graph reasoning backend"
requires-python = ">=3.11"
readme = "../README.md"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py311"
